--- a/src/styles.scss
+++ b/src/styles.scss
@@ -129,11 +129,16 @@ $red: rgb(236, 86, 86);
 }
 
 .sidenavItem {
-  padding: 0.6em 0.5em 0.6em 1em;
+  padding: 0.1em 0.5em 0.1em 1em;
   border-top: 0.1px solid rgba(0, 0, 0, 0.2);
   border-bottom: 0.1px solid rgba(0, 0, 0, 0.2);
   span {
-    font-size: 17px;
+    font-size: 13px;
+  }
+  .mat-icon {
+    font-size: 1em !important;
+    width: 1em !important;
+    height: 1em !important;
   }
 }
 
@@ -838,4 +843,8 @@ iframe {
   .cb-slideshow, .cb-slideshow:after{
 
   }
+}
+
+.not-allowed {
+  cursor: not-allowed;
 }
