--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -12,10 +12,10 @@
                 <h3 class="bold">Call, Email, WhatsApp us or book below</h3>
             </div>
             <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap=".5rem">
-              <mat-icon>phone</mat-icon> <span><a style="text-decoration: none;" href="tel:+27 74 237 0684">074 237 0684</a> </span>
+              <mat-icon>phone</mat-icon> <span><a style="text-decoration: none;" href="tel: +27 87 164 0193"> 087 164 0193</a> </span>
             </div>
             <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap=".5rem">
-              <mat-icon>mail</mat-icon> <span><a style="text-decoration: none;" href="mailto:bookings@bevindatravels.co.za">bookings@bevindatravels.co.za</a> </span>
+              <mat-icon>mail</mat-icon> <span><a style="text-decoration: none;" href="mailto:mandla@bevindatravels.co.za">mandla@bevindatravels.co.za</a> </span>
             </div>
             <div fxLayout="row" fxLayoutAlign="space-between center"  fxLayout.xs="column" fxLayoutAlign.xs="start stretch">
               <div fxLayout="column" fxLayoutAlign="start stretch" fxFlex="47" fxFlex.xs="100">
