--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 
 @import "../node_modules/angular-calendar/css/angular-calendar.css";
 @import "../node_modules/flatpickr/dist/flatpickr.css";
+
 html,
 body {
   height: 100%;
@@ -28,6 +29,7 @@ $darkGrey: #222222;
 $green: rgb(116, 223, 116);
 $orange: rgb(230, 176, 76);
 $red: rgb(236, 86, 86);
+
 .loginCard {
   width: 400px;
 }
@@ -36,6 +38,7 @@ $red: rgb(236, 86, 86);
   height: calc(100vh - 130px);
   overflow-y: auto;
 }
+
 //colors
 .whiteColor,
 .primaryBlueBtn,
@@ -65,12 +68,16 @@ $red: rgb(236, 86, 86);
   font-size: 1.2em !important;
 }
 
+.member-card-amount {
+  font-size: large !important;
+  font-weight: 600 !important;
+}
+
 .blueBackground,
 .primaryBlueBtn,
 .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background,
 .mat-checkbox-checked.mat-accent .mat-checkbox-background,
-.mat-checkbox-checked:not(.mat-checkbox-disabled).mat-accent
-  .mat-ripple-element,
+.mat-checkbox-checked:not(.mat-checkbox-disabled).mat-accent .mat-ripple-element,
 .mat-checkbox:active:not(.mat-checkbox-disabled).mat-accent .mat-ripple-element,
 .mat-step-header .mat-step-icon-selected,
 .mat-step-header .mat-step-icon-state-done,
@@ -98,9 +105,11 @@ $red: rgb(236, 86, 86);
 .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
   background-color: $primaryBlue;
 }
+
 .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
   background-color: lighten($primaryBlue, 25);
 }
+
 .greenColor {
   color: $green;
 }
@@ -132,9 +141,11 @@ $red: rgb(236, 86, 86);
   padding: 0.1em 0.5em 0.1em 1em;
   border-top: 0.1px solid rgba(0, 0, 0, 0.2);
   border-bottom: 0.1px solid rgba(0, 0, 0, 0.2);
+
   span {
     font-size: 13px;
   }
+
   .mat-icon {
     font-size: 1em !important;
     width: 1em !important;
@@ -147,6 +158,7 @@ $red: rgb(236, 86, 86);
   z-index: 5;
   box-shadow: 0px 1px 5px 0px rgb(0 0 0 / 67%) !important;
 }
+
 //padding
 mat-card {
   padding: 0 !important;
@@ -161,7 +173,7 @@ mat-card {
 }
 
 .padding20px {
-  padding: 20px;
+  padding: 20px !important;
 }
 
 //margin
@@ -175,6 +187,7 @@ mat-card {
 
 .height120px {
   height: 120px;
+
   mat-icon {
     height: 50px;
     width: 50px;
@@ -183,6 +196,7 @@ mat-card {
 }
 
 .spinner {
+
   .mat-progress-spinner circle,
   .mat-spinner circle {
     stroke: $primaryBlue;
@@ -247,6 +261,7 @@ mat-card {
 
 .sidenavContainer {
   height: calc(100vh - 65px) !important;
+
   .sidenav {
     width: 250px;
   }
@@ -270,6 +285,7 @@ mat-card {
   border-radius: 50%;
   background: $primaryWhite;
   margin: 1rem auto;
+
   img {
     height: 4rem;
   }
@@ -340,6 +356,7 @@ mat-card {
 .small-font {
   font-size: 0.8rem !important;
 }
+
 .cardFont,
 .congratsText {
   font-size: 30px !important;
@@ -352,6 +369,7 @@ mat-card {
 .height100px {
   height: 100px;
   width: 100% !important;
+
   mat-icon {
     padding-top: 10px;
     height: 40px;
@@ -407,12 +425,14 @@ mat-card {
 
 .nativeTable {
   border-collapse: collapse;
+
   td,
   th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
   }
+
   tr:nth-child(even) {
     background-color: #dddddd;
   }
@@ -460,11 +480,13 @@ iframe {
   z-index: 0;
   overflow-y: hidden;
 }
+
 .cb-slideshow:after {
   content: "";
   // background: transparent url("./assets/img/pattern.png") repeat top left;
   background: rgba(0, 0, 0, 0.2);
 }
+
 .cb-slideshow li span {
   width: 100%;
   height: calc(100vh - 100px) !important;
@@ -484,6 +506,7 @@ iframe {
   -ms-animation: imageAnimation 36s linear infinite 0s;
   animation: imageAnimation 36s linear infinite 0s;
 }
+
 .cb-slideshow li div {
   z-index: 1;
   position: absolute;
@@ -499,15 +522,18 @@ iframe {
   -ms-animation: titleAnimation 36s linear infinite 0s;
   animation: titleAnimation 36s linear infinite 0s;
 }
+
 .cb-slideshow li div h3 {
   font-family: "BebasNeueRegular", "Arial Narrow", Arial, sans-serif;
   font-size: 240px;
   padding: 0;
   line-height: 200px;
 }
+
 .cb-slideshow li:nth-child(1) span {
   background-image: url(./assets/img/slide--1.jpg);
 }
+
 .cb-slideshow li:nth-child(2) span {
   background-image: url(./assets/img/slide--2.jpg);
   -webkit-animation-delay: 6s;
@@ -516,6 +542,7 @@ iframe {
   -ms-animation-delay: 6s;
   animation-delay: 6s;
 }
+
 .cb-slideshow li:nth-child(3) span {
   background-image: url(./assets/img/slide-3.jpeg);
   -webkit-animation-delay: 12s;
@@ -524,6 +551,7 @@ iframe {
   -ms-animation-delay: 12s;
   animation-delay: 12s;
 }
+
 .cb-slideshow li:nth-child(4) span {
   background-image: url(./assets/img/slide-4.jpeg);
   -webkit-animation-delay: 18s;
@@ -532,6 +560,7 @@ iframe {
   -ms-animation-delay: 18s;
   animation-delay: 18s;
 }
+
 .cb-slideshow li:nth-child(5) span {
   background-image: url(./assets/img/slide-5.jpeg);
   -webkit-animation-delay: 24s;
@@ -540,6 +569,7 @@ iframe {
   -ms-animation-delay: 24s;
   animation-delay: 24s;
 }
+
 .cb-slideshow li:nth-child(6) span {
   background-image: url(./assets/img/slide-6.jpg);
   -webkit-animation-delay: 30s;
@@ -548,6 +578,7 @@ iframe {
   -ms-animation-delay: 30s;
   animation-delay: 30s;
 }
+
 .cb-slideshow li:nth-child(2) div {
   -webkit-animation-delay: 6s;
   -moz-animation-delay: 6s;
@@ -555,6 +586,7 @@ iframe {
   -ms-animation-delay: 6s;
   animation-delay: 6s;
 }
+
 .cb-slideshow li:nth-child(3) div {
   -webkit-animation-delay: 12s;
   -moz-animation-delay: 12s;
@@ -562,6 +594,7 @@ iframe {
   -ms-animation-delay: 12s;
   animation-delay: 12s;
 }
+
 .cb-slideshow li:nth-child(4) div {
   -webkit-animation-delay: 18s;
   -moz-animation-delay: 18s;
@@ -569,6 +602,7 @@ iframe {
   -ms-animation-delay: 18s;
   animation-delay: 18s;
 }
+
 .cb-slideshow li:nth-child(5) div {
   -webkit-animation-delay: 24s;
   -moz-animation-delay: 24s;
@@ -576,6 +610,7 @@ iframe {
   -ms-animation-delay: 24s;
   animation-delay: 24s;
 }
+
 .cb-slideshow li:nth-child(6) div {
   -webkit-animation-delay: 30s;
   -moz-animation-delay: 30s;
@@ -583,188 +618,239 @@ iframe {
   -ms-animation-delay: 30s;
   animation-delay: 30s;
 }
+
 /* Animation for the slideshow images */
 @-webkit-keyframes imageAnimation {
   0% {
     opacity: 0;
     -webkit-animation-timing-function: ease-in;
   }
+
   8% {
     opacity: 1;
     -webkit-animation-timing-function: ease-out;
   }
+
   17% {
     opacity: 1;
   }
+
   25% {
     opacity: 0;
   }
+
   100% {
     opacity: 0;
   }
 }
+
 @-moz-keyframes imageAnimation {
   0% {
     opacity: 0;
     -moz-animation-timing-function: ease-in;
   }
+
   8% {
     opacity: 1;
     -moz-animation-timing-function: ease-out;
   }
+
   17% {
     opacity: 1;
   }
+
   25% {
     opacity: 0;
   }
+
   100% {
     opacity: 0;
   }
 }
+
 @-o-keyframes imageAnimation {
   0% {
     opacity: 0;
     -o-animation-timing-function: ease-in;
   }
+
   8% {
     opacity: 1;
     -o-animation-timing-function: ease-out;
   }
+
   17% {
     opacity: 1;
   }
+
   25% {
     opacity: 0;
   }
+
   100% {
     opacity: 0;
   }
 }
+
 @-ms-keyframes imageAnimation {
   0% {
     opacity: 0;
     -ms-animation-timing-function: ease-in;
   }
+
   8% {
     opacity: 1;
     -ms-animation-timing-function: ease-out;
   }
+
   17% {
     opacity: 1;
   }
+
   25% {
     opacity: 0;
   }
+
   100% {
     opacity: 0;
   }
 }
+
 @keyframes imageAnimation {
   0% {
     opacity: 0;
     animation-timing-function: ease-in;
   }
+
   8% {
     opacity: 1;
     animation-timing-function: ease-out;
   }
+
   17% {
     opacity: 1;
   }
+
   25% {
     opacity: 0;
   }
+
   100% {
     opacity: 0;
   }
 }
+
 /* Animation for the title */
 @-webkit-keyframes titleAnimation {
   0% {
     opacity: 0;
   }
+
   8% {
     opacity: 1;
   }
+
   17% {
     opacity: 1;
   }
+
   19% {
     opacity: 0;
   }
+
   100% {
     opacity: 0;
   }
 }
+
 @-moz-keyframes titleAnimation {
   0% {
     opacity: 0;
   }
+
   8% {
     opacity: 1;
   }
+
   17% {
     opacity: 1;
   }
+
   19% {
     opacity: 0;
   }
+
   100% {
     opacity: 0;
   }
 }
+
 @-o-keyframes titleAnimation {
   0% {
     opacity: 0;
   }
+
   8% {
     opacity: 1;
   }
+
   17% {
     opacity: 1;
   }
+
   19% {
     opacity: 0;
   }
+
   100% {
     opacity: 0;
   }
 }
+
 @-ms-keyframes titleAnimation {
   0% {
     opacity: 0;
   }
+
   8% {
     opacity: 1;
   }
+
   17% {
     opacity: 1;
   }
+
   19% {
     opacity: 0;
   }
+
   100% {
     opacity: 0;
   }
 }
+
 @keyframes titleAnimation {
   0% {
     opacity: 0;
   }
+
   8% {
     opacity: 1;
   }
+
   17% {
     opacity: 1;
   }
+
   19% {
     opacity: 0;
   }
+
   100% {
     opacity: 0;
   }
 }
+
 /* Show at least something when animations not supported */
 .no-cssanimations .cb-slideshow li span {
   opacity: 1;
@@ -775,6 +861,7 @@ iframe {
     font-size: 140px;
   }
 }
+
 @media screen and (max-width: 600px) {
   .cb-slideshow li div h3 {
     font-size: 80px;
@@ -784,12 +871,17 @@ iframe {
 .welcome-text {
   font-size: 3rem !important;
 }
-
+.btn-card{
+  border-radius: 23px !important;
+  border: 1px solid white !important;
+}
 .bottom-zero {
   bottom: 0;
   z-index: 2;
 }
-
+.margin-bottom40{
+  margin-bottom: 40px !important;
+}
 .noMarginBottom {
   margin-bottom: 0 !important;
   margin-block-end: 0 !important;
@@ -816,9 +908,11 @@ iframe {
 .break-text-sm {
   font-size: 12px !important;
 }
+
 .lg-text {
   width: 120%;
 }
+
 .width-400px {
   width: 400px !important;
 }
@@ -830,19 +924,21 @@ iframe {
 .height40px {
   height: 40px;
 }
+
 .height45px {
   height: 50px;
 }
 
 @media (max-width: 700px) {
+
   .cb-slideshow,
   .cb-slideshow:after {
     height: 100% !important;
     top: 90px !important;
   }
-  .cb-slideshow, .cb-slideshow:after{
 
-  }
+  .cb-slideshow,
+  .cb-slideshow:after {}
 }
 
 .not-allowed {
