Ozow payment complete

--- a/src/app/ozow-invoice/ozow-invoice.component.html
+++ b/src/app/ozow-invoice/ozow-invoice.component.html
@@ -76,6 +76,7 @@
             formControlName="email"
             placeholder="Email"
             required
+            type="email"
           />
           <mat-error
             *ngIf="
@@ -100,6 +101,7 @@
           formControlName="amount"
           placeholder="Amount"
           required
+          type="number"
         />
         <mat-error
           *ngIf="
