--- a/src/app/patients/patients.component.html
+++ b/src/app/patients/patients.component.html
@@ -10,17 +10,21 @@
         <div fxLayout="row" fxLayoutAlign="space-between center">
             <div fxFlex="100" fxLayout="column" fxLayoutAlign="start stretch">
                 <mat-card>
-                    <mat-card-content [ngClass]="(router.url.includes('home') ? 'patientHeightHome' : '')" class="cardHeight">
+                    <mat-card-content [ngClass]="(router.url.includes('home') ? 'patientHeightHome' : '')"
+                        class="cardHeight">
                         <div class="padding10px" fxLayout="row" fxLayoutAlign="space-between center">
-                          <mat-form-field appearance="legacy">
-                            <mat-label>Filter By Client Type</mat-label>
-                            <mat-select [(value)]="filterValue" (selectionChange)="filterClients($event)" matInput required>
-                                <mat-option value="Corporate">Corporate</mat-option>
-                                <mat-option value="Private">Private</mat-option>
-                            </mat-select>
-                        </mat-form-field>
+                            <mat-form-field appearance="legacy">
+                                <mat-label>Filter By Client Type</mat-label>
+                                <mat-select [(value)]="filterValue" (selectionChange)="filterClients($event)" matInput
+                                    required>
+                                    <mat-option value="Corporate">Corporate</mat-option>
+                                    <mat-option value="Private">Private</mat-option>
+                                </mat-select>
+                            </mat-form-field>
                             <div fxFlex="100" fxLayout="column" fxLayoutAlign="center end">
-                                <button (click)="addNewClient()" mat-raised-button class="primaryBlueBtn whiteColor"> <mat-icon class="font20px">person_add</mat-icon> Add Client</button>
+                                <button mat-raised-button class="primaryBlueBtn whiteColor">
+                                    <mat-icon class="font20px">person_add</mat-icon> Add Member
+                                </button>
                             </div>
                         </div>
                         <div *ngIf="!clients?.length" fxLayout="row" fxLayoutAlign="center stretch">
@@ -32,32 +36,45 @@
                                 <!--  First Name Column -->
                                 <ng-container matColumnDef="firstName">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
-                                    <td mat-cell *matCellDef="let row"> {{row.personalDetails.firstName}} </td>
+                                    <td mat-cell *matCellDef="let row"> {{row.firstName}} </td>
                                 </ng-container>
 
                                 <!--  Last Name Column -->
                                 <ng-container matColumnDef="lastName">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
-                                    <td mat-cell *matCellDef="let row"> {{row.personalDetails.lastName}} </td>
+                                    <td mat-cell *matCellDef="let row"> {{row.lastName}} </td>
                                 </ng-container>
 
 
                                 <!-- ID Number Column -->
-                                <ng-container matColumnDef="clientType">
-                                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Client Type </th>
-                                    <td mat-cell *matCellDef="let row"> {{row.personalDetails.clientType}} </td>
+                                <ng-container matColumnDef="cardType">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Card Type </th>
+                                    <td mat-cell *matCellDef="let row"> {{row.cardType}} </td>
                                 </ng-container>
 
                                 <!-- Address Column -->
                                 <ng-container matColumnDef="address">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
-                                    <td mat-cell *matCellDef="let row"> {{row.personalDetails.clientAddress.street}}, {{row.personalDetails.clientAddress.town}}, {{row.personalDetails.clientAddress.city}}, {{row.personalDetails.clientAddress.code}} </td>
+                                    <td mat-cell *matCellDef="let row"> {{row.address.street}}, {{row.address.suburb}},
+                                        {{row.address.town}}, {{row.address.code}} </td>
                                 </ng-container>
 
                                 <!-- Phone Column -->
                                 <ng-container matColumnDef="phone">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Phone </th>
-                                    <td mat-cell *matCellDef="let row"> {{row.personalDetails.clientAddress.phone}} </td>
+                                    <td mat-cell *matCellDef="let row"> {{row.phone}} </td>
+                                </ng-container>
+
+                                <!-- Sign Up Date Column -->
+                                <ng-container matColumnDef="signUpDate">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Signup Date </th>
+                                    <td mat-cell *matCellDef="let row"> {{row.signUpDate | date:'mediumDate'}} </td>
+                                </ng-container>
+
+                                <!-- Expiry Date Column -->
+                                <ng-container matColumnDef="expiryDate">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Expiry Date </th>
+                                    <td mat-cell *matCellDef="let row"> {{row.expiryDate | date:'mediumDate'}} </td>
                                 </ng-container>
 
                                 <!-- Action Column -->
@@ -65,15 +82,17 @@
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
                                     <td mat-cell *matCellDef="let row">
                                         <div fxLayout="row" fxLayoutAlign="start stretch" fxLayoutGap="5px">
-                                            <mat-icon (click)="editClient(row)" class="pointer primaryBlue">edit</mat-icon>
-                                            <mat-icon (click)="deleteClientFromDB(row)" class="pointer redColor">delete</mat-icon>
+                                            <mat-icon (click)="editClient(row)" class="pointer primaryBlue">edit
+                                            </mat-icon>
+                                            <mat-icon (click)="deleteClientFromDB(row)" class="pointer redColor">delete
+                                            </mat-icon>
                                             <!-- <mat-icon class="pointer orangeColor">manage_accounts</mat-icon> -->
                                         </div>
                                     </td>
                                 </ng-container>
 
                                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                                <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="navigateToMember(row)" class="pointer"></tr>
 
                                 <!-- Row shown when there is no matching data. -->
                                 <tr class="mat-row" *matNoDataRow>
@@ -81,7 +100,8 @@
                                 </tr>
                             </table>
 
-                            <mat-paginator [length]="clients?.length" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+                            <mat-paginator [length]="clients?.length" [pageSize]="10"
+                                [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
                         </div>
                     </mat-card-content>
                 </mat-card>
