Removed nav function to icon, server url

--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -235,7 +235,7 @@
             </mat-form-field>
         </div>
         <div fxLayout="row" fxLayoutAlign="space-between center" fxFlex="100">
-            <p class="bold margin-bottom12px">Members Address</p>
+            <p class="bold margin-bottom12px">Member Address</p>
         </div>
         <div fxLayout="row wrap" fxLayoutAlign="space-between center" fxFlex="100" formGroupName="address">
             <div fxFlex="48" fxLayout="column" fxLayoutAlign="start stretch">
