--- a/src/app/patients/patients.component.html
+++ b/src/app/patients/patients.component.html
@@ -78,17 +78,17 @@
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
                                     <td mat-cell *matCellDef="let row">
                                         <div fxLayout="row" fxLayoutAlign="start stretch" fxLayoutGap="5px">
-                                            <mat-icon (click)="editClient(row)" class="pointer primaryBlue">edit
+                                            <mat-icon matTooltip="Manage Member" (click)="navigateToMember(row)" class="pointer orangeColor">manage_accounts</mat-icon>
+                                            <mat-icon matTooltip="Edit Basic Details" (click)="editClient(row)" class="pointer primaryBlue">edit
                                             </mat-icon>
-                                            <mat-icon (click)="deleteClientFromDB(row)" class="pointer redColor">delete
+                                            <mat-icon matTooltip="Delete Member" (click)="deleteClientFromDB(row)" class="pointer redColor">delete
                                             </mat-icon>
-                                            <!-- <mat-icon class="pointer orangeColor">manage_accounts</mat-icon> -->
                                         </div>
                                     </td>
                                 </ng-container>
 
                                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                                <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="navigateToMember(row)" class="pointer"></tr>
+                                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
                                 <!-- Row shown when there is no matching data. -->
                                 <tr class="mat-row" *matNoDataRow>
